--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
+    "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-query": "^5.75.5",
     "@tanstack/react-router": "^1.120.2",
     "@tanstack/react-router-devtools": "^1.114.3",
